nephio-mgnt/01-gitea/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata: # kpt-merge: gitea/gitea
  name: gitea
  namespace: gitea
  labels:
    app: gitea
    app.kubernetes.io/instance: nephio-gitea
    app.kubernetes.io/name: gitea
  annotations:
    internal.kpt.dev/upstream-identifier: 'route.openshift.io|Route|gitea|gitea'
spec:
  to:
    kind: Service
    name: gitea
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
